--- a/test_text.ipynb
+++ b/test_text.ipynb
@@ -14,8 +14,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('e', 872), ('t', 758), ('o', 525), ('i', 443), ('n', 434), ('a', 419), ('h', 403), ('s', 368), ('r', 353), ('d', 240), ('l', 188), ('f', 162), ('u', 156), ('c', 153), ('m', 141), ('p', 140), ('w', 130), ('g', 92), ('y', 89), ('b', 89), ('v', 62), ('k', 26), ('T', 25), ('M', 20), ('I', 18), ('x', 17), ('q', 17), ('C', 15), ('A', 11), ('S', 9), ('W', 8), ('H', 8), ('F', 6), ('D', 6), ('R', 6), ('P', 5), ('G', 5), ('j', 5), ('O', 4), ('L', 4), ('z', 3), ('B', 2), ('N', 1), ('J', 1), ('E', 1), ('U', 1)]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": "<Figure size 720x144 with 1 Axes>",
@@ -30,7 +37,7 @@
    "source": [
     "import matplotlib.pyplot as pyplot\n",
     "\n",
-    "from efficiency import *\n",
+    "from text import *\n",
     "\n",
     "frequency_map = count_letter_frequency(\n",
     "    prepare_text(load_text(text_path))\n",
