--- a/efficiency.ipynb
+++ b/efficiency.ipynb
@@ -103,7 +103,7 @@
     "\n",
     "## Consecutive keys on the same hand\n",
     "\n",
-    "Activate rule is both current key and the previous one are assigned to the same hand.\n",
+    "Activate rule when both current key and the previous one are assigned to the same hand.\n",
     "\n",
     "## Dominant hand\n",
     "\n",
